Use List.getLast()
Do not open-code List.getLast().

Change-Id: I8cb90c2c3c7e8608a156a4b2518a21b921dbc3e6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>